version/0.66/_sources/examples/gallery_examples/00-mapdl-examples/transient_thermal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/transient_thermal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_transient_thermal.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_transient_thermal.py:


.. _ref_thermal_transient:

Example Thermal Transient Analysis
----------------------------------

This example shows how you can use PyMAPDL to input a time dependent
temperature table to vary the temperature at a beam. This uses
convection loads with independently varying convection coefficient and
bulk temperature.

Example adapted from:
https://www.simutechgroup.com/tips-and-tricks/fea-articles/97-fea-tips-tricks-thermal-transient

Thanks SimuTech!

.. GENERATED FROM PYTHON SOURCE LINES 18-43

.. code-block:: default

    # sphinx_gallery_thumbnail_number = 4

    import matplotlib.pyplot as plt
    import numpy as np

    from ansys.mapdl.core import launch_mapdl

    mapdl = launch_mapdl(loglevel="ERROR")

    mapdl.clear()
    mapdl.prep7()

    # Material properties-- 1020 steel in imperial
    mapdl.units("BIN")  # U.S. Customary system using inches (in, lbf*s2/in, s, °F).
    mapdl.mp("EX", 1, 30023280.0)
    mapdl.mp("NUXY", 1, 0.290000000)
    mapdl.mp("ALPX", 1, 8.388888889e-06)
    mapdl.mp("DENS", 1, 7.346344000e-04)
    mapdl.mp("KXX", 1, 6.252196000e-04)
    mapdl.mp("C", 1, 38.6334760)

    # use a thermal element type
    mapdl.et(1, "SOLID70")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    1



.. GENERATED FROM PYTHON SOURCE LINES 44-47

Geometry and Mesh
~~~~~~~~~~~~~~~~~
Create a block 5x1x1 inches in size and mesh it

.. GENERATED FROM PYTHON SOURCE LINES 47-56

.. code-block:: default

    mapdl.block(0, 5, 0, 1, 0, 1)
    mapdl.lesize("ALL", 0.2, layer1=1)

    mapdl.mshape(0, "3D")
    mapdl.mshkey(1)
    mapdl.vmesh(1)
    mapdl.eplot()





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_001.png
   :alt: transient thermal
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 57-70

Setup the Solution
~~~~~~~~~~~~~~~~~~
Solve a transient analysis while ramping the load up and down.

Note the solution time commands in the above code fragment. The
final TIME is set to 1000 seconds. Time substep size is permitted to
range from a minimum of 2 seconds to a maximum of 50 seconds in the
DELTIM command. A first substep of 10 seconds is applied. Automatic
time substep sizing will vary substeps between the extremes.

A Table Array is used for the time-dependent Convection Coefficient
values. Times go in the Zeroth column, while associated Convection
Coefficients go in the First column.

.. GENERATED FROM PYTHON SOURCE LINES 70-115

.. code-block:: default


    mapdl.run("/SOLU")
    mapdl.antype(4)  # transient analysis
    mapdl.trnopt("FULL")  # full transient analysis
    mapdl.kbc(0)  # ramp loads up and down

    # Time stepping
    end_time = 1500
    mapdl.time(end_time)  # end time for load step
    mapdl.autots("ON")  # use automatic time stepping


    # setup where the subset time is 10 seconds, time
    mapdl.deltim(10, 2, 25)  # substep size (seconds)
    #                          -- minimum value shorter than smallest
    #                            time change in the table arrays below

    # Create a table of convection times and coefficients and transfer it to MAPDL
    my_conv = np.array(
        [
            [0, 0.001],  # start time
            [120, 0.001],  # end of first "flat" zone
            [130, 0.005],  # ramps up in 10 seconds
            [700, 0.005],  # end of second "flat zone
            [710, 0.002],  # ramps down in 10 seconds
            [end_time, 0.002],
        ]
    )  # end of third "flat" zone
    mapdl.load_table("my_conv", my_conv, "TIME")


    # Create a table of bulk temperatures for a given time and transfer to MAPDL
    my_bulk = np.array(
        [
            [0, 100],  # start time
            [120, 100],  # end of first "flat" zone
            [500, 300],  # ramps up in 380 seconds
            [700, 300],  # hold temperature for 200 seconds
            [900, 75],  # temperature ramps down for 200 seconds
            [end_time, 75],
        ]
    )  # end of second "flat" zone
    mapdl.load_table("my_bulk", my_bulk, "TIME")









.. GENERATED FROM PYTHON SOURCE LINES 116-157

The Transient Thermal Solve
~~~~~~~~~~~~~~~~~~~~~~~~~~~
This model is to be solved in one time step. For this reason, a
``TSRES`` command is used for force the solver to include a
``SOLVE`` at every time point in the two Table Arrays above. This
ensures that the time-dependent curves are followed by the transient
analysis. Intermediate solutions between the ``TSRES`` time points
will be included according to the ``DELTIM`` command and the
automatic time stepping decisions of the ANSYS solver.

In this example, the times for the ``TSRES`` array illustrated above
have been determined manually. A set of APDL commands could be used
to automate this process for chosen Table Array entries, in more
complex modeling situations, including checks that no time intervals
are too short.

Results at substeps will be wanted if the intermediate solutions of
the time-transient analysis are to be available for post-processing
review. The ``OUTRES`` command is used to control how much is written to
the results file. In this example the OUTRES command will be used to
simply write out all results for all substeps. In work with large
models and may substeps, too much data will be written if such a
strategy is employed for ``OUTRES``, and other options will need to be
considered. Note that one option for the ``OUTRES`` command is to
control times at which results are written with a Table Array, much
as is used in the ``TSRES`` command, but typically for a larger number
of time points, although including those of the TSRES array.

The initial condition starting temperature is controlled for this
example with the ``TUNIF`` command. Note that thermal transient
analyses can also have a starting temperature profile formed by a
static thermal ``SOLVE``. If a user neglects to set an initial
temperature in ANSYS Mechanical APDL, a value of zero will be used,
which is often not what is desired.

The thermal convective loads are applied with an SF family
command—in this example a convective load is applied to the end face
of the solid model by the SFA command, using the Table Array entries
for convection and bulk temperature that were developed above. The
Table Array names are surrounded with percent signs (%).  A SOLVE is
then performed.

.. GENERATED FROM PYTHON SOURCE LINES 157-176

.. code-block:: default


    # Force transient solve to include the times within the conv and bulk arrays
    # my_tres = np.unique(np.vstack((my_bulk[:, 0], my_conv[:, 0])))[0]  # same as
    mapdl.parameters["my_tsres"] = [120, 130, 500, 700, 710, 900, end_time]
    mapdl.tsres("%my_tsres%")

    mapdl.outres("ERASE")
    mapdl.outres("ALL", "ALL")

    mapdl.eqslv("SPARSE")  # use sparse solver
    mapdl.tunif(75)  # force uniform starting temperature (otherwise zero)

    # apply the convective load (convection coefficient plus bulk temperature)
    # use "%" around table array names
    mapdl.sfa(6, 1, "CONV", "%my_conv%", " %my_bulk%")

    # solve
    mapdl.solve()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    *****  MAPDL SOLVE    COMMAND  *****

     TRANSFER SOLID MODEL BOUNDARY CONDITIONS TO FINITE ELEMENT MODEL
          SURFACE LOADS  TRANSFERRED FROM AREAS         =     25

     *** NOTE ***                            CP =       0.000   TIME= 00:00:00
     There is no title defined for this analysis.                            
       *****MAPDL VERIFICATION RUN ONLY*****
         DO NOT USE RESULTS FOR PRODUCTION

                           S O L U T I O N   O P T I O N S

       PROBLEM DIMENSIONALITY. . . . . . . . . . . . .3-D                  
       DEGREES OF FREEDOM. . . . . . TEMP
       ANALYSIS TYPE . . . . . . . . . . . . . . . . .TRANSIENT            
          SOLUTION METHOD. . . . . . . . . . . . . . .FULL                 
       EQUATION SOLVER OPTION. . . . . . . . . . . . .SPARSE             
       GLOBALLY ASSEMBLED MATRIX . . . . . . . . . . .SYMMETRIC  

     *** NOTE ***                            CP =       0.000   TIME= 00:00:00
     The conditions for direct assembly have been met.  No .emat or .erot    
     files will be produced.                                                 

  
  
         D I S T R I B U T E D   D O M A I N   D E C O M P O S E R
  
      ...Number of elements: 625
      ...Number of nodes:    936
      ...Decompose to 0 CPU domains
      ...Element load balance ratio =     0.000


                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     1
       TIME AT END OF THE LOAD STEP. . . . . . . . . .  1500.0    
       AUTOMATIC TIME STEPPING . . . . . . . . . . . .    ON
          STARTING TIME STEP SIZE. . . . . . . . . . .  10.000    
          MINIMUM TIME STEP SIZE . . . . . . . . . . .  2.0000    
          MAXIMUM TIME STEP SIZE . . . . . . . . . . .  25.000    
       TIME STEP RESET ARRAY . . . . . . . . . . . . .  MY_TSRES
       STEP CHANGE BOUNDARY CONDITIONS . . . . . . . .    NO
       TRANSIENT (INERTIA) EFFECTS
          THERMAL DOFS . . . . . . . . . . . . . . . .    ON
       TRANSIENT INTEGRATION PARAMETERS
          THETA. . . . . . . . . . . . . . . . . . . .  1.0000    
          OSCILLATION LIMIT CRITERION. . . . . . . . . 0.50000    
          TOLERANCE. . . . . . . . . . . . . . . . . .  0.0000    
       PRINT OUTPUT CONTROLS . . . . . . . . . . . . .NO PRINTOUT
       DATABASE OUTPUT CONTROLS
          ITEM     FREQUENCY   COMPONENT
           ALL        ALL               





                **** CENTER OF MASS, MASS, AND MASS MOMENTS OF INERTIA ****

      CALCULATIONS ASSUME ELEMENT MASS AT ELEMENT CENTROID

      TOTAL MASS =  0.36732E-02

                               MOM. OF INERTIA         MOM. OF INERTIA
      CENTER OF MASS            ABOUT ORIGIN        ABOUT CENTER OF MASS

      XC =   2.5000          IXX =   0.2424E-02      IXX =   0.5877E-03
      YC =  0.50000          IYY =   0.3181E-01      IYY =   0.7934E-02
      ZC =  0.50000          IZZ =   0.3181E-01      IZZ =   0.7934E-02
                             IXY =  -0.4591E-02      IXY =   0.1626E-16
                             IYZ =  -0.9183E-03      IYZ =   0.3732E-17
                             IZX =  -0.4591E-02      IZX =   0.1789E-16


      *** MASS SUMMARY BY ELEMENT TYPE ***

      TYPE      MASS
         1  0.367317E-02

     Range of element maximum matrix coefficients in global coordinates
     Maximum = 5.168130667E-05 at element 0.                                 
     Minimum = 4.168130667E-05 at element 0.                                 

       *** ELEMENT MATRIX FORMULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1       625  SOLID70       0.000   0.000000
     Time at end of element matrix formulation CP = 0.                       

     ALL CURRENT MAPDL DATA WRITTEN TO FILE NAME= 
      FOR POSSIBLE RESUME FROM THIS POINT

     DISTRIBUTED SPARSE MATRIX DIRECT SOLVER.
      Number of equations =         936,    Maximum wavefront =      0
      Memory available (MB) =    0.0    ,  Memory required (MB) =    0.0    

     Distributed sparse solver maximum pivot= 0 at node 0 .                  
     Distributed sparse solver minimum pivot= 0 at node 0 .                  
     Distributed sparse solver minimum pivot in absolute value= 0 at node 0  
     .                                                                       

       *** ELEMENT RESULT CALCULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1       625  SOLID70       0.000   0.000000

       *** NODAL LOAD CALCULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            1       625  SOLID70       0.000   0.000000
     *** LOAD STEP     1   SUBSTEP     1  COMPLETED.    CUM ITER =      1
     *** TIME =   10.0000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2324       OSCILLATION LIMIT =  2.324    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.3333      DECREASED (FACTOR = 0.3333)

     *** LOAD STEP     1   SUBSTEP     2  COMPLETED.    CUM ITER =      2
     *** TIME =   13.3333         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8326E-01   OSCILLATION LIMIT = 0.2775    
     *** AUTO STEP TIME:  NEXT TIME INC =  3.3333      UNCHANGED

     *** LOAD STEP     1   SUBSTEP     3  COMPLETED.    CUM ITER =      3
     *** TIME =   16.6667         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.5387E-01   OSCILLATION LIMIT = 0.1796    
     *** AUTO TIME STEP:  NEXT TIME INC =  9.2821      INCREASED (FACTOR = 2.7846)

     *** LOAD STEP     1   SUBSTEP     4  COMPLETED.    CUM ITER =      4
     *** TIME =   25.9488         TIME INC =   9.28214      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.3279E-01   OSCILLATION LIMIT = 0.3044    
     *** AUTO TIME STEP:  NEXT TIME INC =  15.248      INCREASED (FACTOR = 1.6427)

     *** LOAD STEP     1   SUBSTEP     5  COMPLETED.    CUM ITER =      5
     *** TIME =   41.1965         TIME INC =   15.2477      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2082E-01   OSCILLATION LIMIT = 0.3174    
     *** AUTO TIME STEP:  NEXT TIME INC =  24.019      INCREASED (FACTOR = 1.5753)

     *** LOAD STEP     1   SUBSTEP     6  COMPLETED.    CUM ITER =      6
     *** TIME =   65.2156         TIME INC =   24.0191      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1335E-01   OSCILLATION LIMIT = 0.3207    
     *** AUTO TIME STEP:  NEXT TIME INC =  25.000      INCREASED (FACTOR = 1.0408)

     *** LOAD STEP     1   SUBSTEP     7  COMPLETED.    CUM ITER =      7
     *** TIME =   90.2156         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9188E-02   OSCILLATION LIMIT = 0.2297    
     *** AUTO TIME STEP:  NEXT TIME INC =  14.892      DECREASED (FACTOR = 0.5957)

     *** LOAD STEP     1   SUBSTEP     8  COMPLETED.    CUM ITER =      8
     *** TIME =   105.108         TIME INC =   14.8922      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7332E-02   OSCILLATION LIMIT = 0.1092    
     *** AUTO STEP TIME:  NEXT TIME INC =  14.892      UNCHANGED

     *** LOAD STEP     1   SUBSTEP     9  COMPLETED.    CUM ITER =      9
     *** TIME =   120.000         TIME INC =   14.8922      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.5920E-02   OSCILLATION LIMIT = 0.8817E-01
     *** AUTO TIME STEP:  NEXT TIME INC =  10.000      DECREASED (FACTOR = 0.6715)

     *** LOAD STEP     1   SUBSTEP    10  COMPLETED.    CUM ITER =     10
     *** TIME =   130.000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.6812       OSCILLATION LIMIT =  6.812    
     *** AUTO STEP TIME:  NEXT TIME INC =  10.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP    11  COMPLETED.    CUM ITER =     11
     *** TIME =   140.000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.3243       OSCILLATION LIMIT =  3.243    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.3333      DECREASED (FACTOR = 0.3333)

     *** LOAD STEP     1   SUBSTEP    12  COMPLETED.    CUM ITER =     12
     *** TIME =   143.333         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2992       OSCILLATION LIMIT = 0.9973    
     *** AUTO STEP TIME:  NEXT TIME INC =  3.3333      UNCHANGED

     *** LOAD STEP     1   SUBSTEP    13  COMPLETED.    CUM ITER =     13
     *** TIME =   146.667         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2844       OSCILLATION LIMIT = 0.9480    
     *** AUTO STEP TIME:  NEXT TIME INC =  3.3333      UNCHANGED

     *** LOAD STEP     1   SUBSTEP    14  COMPLETED.    CUM ITER =     14
     *** TIME =   150.000         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2723       OSCILLATION LIMIT = 0.9075    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.0000      DECREASED (FACTOR = 0.6000)

     *** LOAD STEP     1   SUBSTEP    15  COMPLETED.    CUM ITER =     15
     *** TIME =   152.000         TIME INC =   2.00000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2656       OSCILLATION LIMIT = 0.5313    
     *** AUTO STEP TIME:  NEXT TIME INC =  2.0000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP    16  COMPLETED.    CUM ITER =     16
     *** TIME =   154.000         TIME INC =   2.00000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2595       OSCILLATION LIMIT = 0.5189    
     *** AUTO STEP TIME:  NEXT TIME INC =  2.0000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP    17  COMPLETED.    CUM ITER =     17
     *** TIME =   156.000         TIME INC =   2.00000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2537       OSCILLATION LIMIT = 0.5074    
     *** AUTO STEP TIME:  NEXT TIME INC =  2.0000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP    18  COMPLETED.    CUM ITER =     18
     *** TIME =   158.000         TIME INC =   2.00000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2483       OSCILLATION LIMIT = 0.4967    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.0134      INCREASED (FACTOR = 1.0067)

     *** LOAD STEP     1   SUBSTEP    19  COMPLETED.    CUM ITER =     19
     *** TIME =   160.013         TIME INC =   2.01340      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2432       OSCILLATION LIMIT = 0.4897    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.0556      INCREASED (FACTOR = 1.0209)

     *** LOAD STEP     1   SUBSTEP    20  COMPLETED.    CUM ITER =     20
     *** TIME =   162.069         TIME INC =   2.05556      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2384       OSCILLATION LIMIT = 0.4899    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.0977      INCREASED (FACTOR = 1.0205)

     *** LOAD STEP     1   SUBSTEP    21  COMPLETED.    CUM ITER =     21
     *** TIME =   164.167         TIME INC =   2.09773      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2337       OSCILLATION LIMIT = 0.4901    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.1399      INCREASED (FACTOR = 1.0201)

     *** LOAD STEP     1   SUBSTEP    22  COMPLETED.    CUM ITER =     22
     *** TIME =   166.307         TIME INC =   2.13991      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2291       OSCILLATION LIMIT = 0.4903    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.1821      INCREASED (FACTOR = 1.0197)

     *** LOAD STEP     1   SUBSTEP    23  COMPLETED.    CUM ITER =     23
     *** TIME =   168.489         TIME INC =   2.18210      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2248       OSCILLATION LIMIT = 0.4905    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.2243      INCREASED (FACTOR = 1.0193)

     *** LOAD STEP     1   SUBSTEP    24  COMPLETED.    CUM ITER =     24
     *** TIME =   170.713         TIME INC =   2.22429      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2206       OSCILLATION LIMIT = 0.4907    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.2665      INCREASED (FACTOR = 1.0190)

     *** LOAD STEP     1   SUBSTEP    25  COMPLETED.    CUM ITER =     25
     *** TIME =   172.979         TIME INC =   2.26648      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2166       OSCILLATION LIMIT = 0.4909    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.3087      INCREASED (FACTOR = 1.0186)

     *** LOAD STEP     1   SUBSTEP    26  COMPLETED.    CUM ITER =     26
     *** TIME =   175.288         TIME INC =   2.30867      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2127       OSCILLATION LIMIT = 0.4910    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.3509      INCREASED (FACTOR = 1.0183)

     *** LOAD STEP     1   SUBSTEP    27  COMPLETED.    CUM ITER =     27
     *** TIME =   177.639         TIME INC =   2.35087      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2089       OSCILLATION LIMIT = 0.4912    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.3931      INCREASED (FACTOR = 1.0180)

     *** LOAD STEP     1   SUBSTEP    28  COMPLETED.    CUM ITER =     28
     *** TIME =   180.032         TIME INC =   2.39307      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2053       OSCILLATION LIMIT = 0.4913    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.4353      INCREASED (FACTOR = 1.0176)

     *** LOAD STEP     1   SUBSTEP    29  COMPLETED.    CUM ITER =     29
     *** TIME =   182.467         TIME INC =   2.43529      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2018       OSCILLATION LIMIT = 0.4915    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.4775      INCREASED (FACTOR = 1.0173)

     *** LOAD STEP     1   SUBSTEP    30  COMPLETED.    CUM ITER =     30
     *** TIME =   184.945         TIME INC =   2.47752      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1984       OSCILLATION LIMIT = 0.4916    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.5198      INCREASED (FACTOR = 1.0171)

     *** LOAD STEP     1   SUBSTEP    31  COMPLETED.    CUM ITER =     31
     *** TIME =   187.465         TIME INC =   2.51977      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1952       OSCILLATION LIMIT = 0.4917    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.5621      INCREASED (FACTOR = 1.0168)

     *** LOAD STEP     1   SUBSTEP    32  COMPLETED.    CUM ITER =     32
     *** TIME =   190.027         TIME INC =   2.56205      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1920       OSCILLATION LIMIT = 0.4919    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.6044      INCREASED (FACTOR = 1.0165)

     *** LOAD STEP     1   SUBSTEP    33  COMPLETED.    CUM ITER =     33
     *** TIME =   192.631         TIME INC =   2.60438      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1889       OSCILLATION LIMIT = 0.4920    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.6467      INCREASED (FACTOR = 1.0163)

     *** LOAD STEP     1   SUBSTEP    34  COMPLETED.    CUM ITER =     34
     *** TIME =   195.278         TIME INC =   2.64674      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1859       OSCILLATION LIMIT = 0.4921    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.6892      INCREASED (FACTOR = 1.0160)

     *** LOAD STEP     1   SUBSTEP    35  COMPLETED.    CUM ITER =     35
     *** TIME =   197.967         TIME INC =   2.68917      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1830       OSCILLATION LIMIT = 0.4922    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.7317      INCREASED (FACTOR = 1.0158)

     *** LOAD STEP     1   SUBSTEP    36  COMPLETED.    CUM ITER =     36
     *** TIME =   200.699         TIME INC =   2.73166      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1802       OSCILLATION LIMIT = 0.4923    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.7742      INCREASED (FACTOR = 1.0156)

     *** LOAD STEP     1   SUBSTEP    37  COMPLETED.    CUM ITER =     37
     *** TIME =   203.473         TIME INC =   2.77422      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1775       OSCILLATION LIMIT = 0.4924    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.8169      INCREASED (FACTOR = 1.0154)

     *** LOAD STEP     1   SUBSTEP    38  COMPLETED.    CUM ITER =     38
     *** TIME =   206.290         TIME INC =   2.81688      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1748       OSCILLATION LIMIT = 0.4925    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.8596      INCREASED (FACTOR = 1.0152)

     *** LOAD STEP     1   SUBSTEP    39  COMPLETED.    CUM ITER =     39
     *** TIME =   209.149         TIME INC =   2.85963      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1723       OSCILLATION LIMIT = 0.4926    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.9025      INCREASED (FACTOR = 1.0150)

     *** LOAD STEP     1   SUBSTEP    40  COMPLETED.    CUM ITER =     40
     *** TIME =   212.052         TIME INC =   2.90250      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1698       OSCILLATION LIMIT = 0.4927    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.9455      INCREASED (FACTOR = 1.0148)

     *** LOAD STEP     1   SUBSTEP    41  COMPLETED.    CUM ITER =     41
     *** TIME =   214.997         TIME INC =   2.94549      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1673       OSCILLATION LIMIT = 0.4928    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.9886      INCREASED (FACTOR = 1.0146)

     *** LOAD STEP     1   SUBSTEP    42  COMPLETED.    CUM ITER =     42
     *** TIME =   217.986         TIME INC =   2.98863      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1649       OSCILLATION LIMIT = 0.4929    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.0319      INCREASED (FACTOR = 1.0145)

     *** LOAD STEP     1   SUBSTEP    43  COMPLETED.    CUM ITER =     43
     *** TIME =   221.018         TIME INC =   3.03192      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1626       OSCILLATION LIMIT = 0.4929    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.0754      INCREASED (FACTOR = 1.0143)

     *** LOAD STEP     1   SUBSTEP    44  COMPLETED.    CUM ITER =     44
     *** TIME =   224.093         TIME INC =   3.07537      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1603       OSCILLATION LIMIT = 0.4930    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.1190      INCREASED (FACTOR = 1.0142)

     *** LOAD STEP     1   SUBSTEP    45  COMPLETED.    CUM ITER =     45
     *** TIME =   227.212         TIME INC =   3.11902      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1581       OSCILLATION LIMIT = 0.4931    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.1629      INCREASED (FACTOR = 1.0141)

     *** LOAD STEP     1   SUBSTEP    46  COMPLETED.    CUM ITER =     46
     *** TIME =   230.375         TIME INC =   3.16286      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1559       OSCILLATION LIMIT = 0.4931    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.2069      INCREASED (FACTOR = 1.0139)

     *** LOAD STEP     1   SUBSTEP    47  COMPLETED.    CUM ITER =     47
     *** TIME =   233.582         TIME INC =   3.20692      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1538       OSCILLATION LIMIT = 0.4932    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.2512      INCREASED (FACTOR = 1.0138)

     *** LOAD STEP     1   SUBSTEP    48  COMPLETED.    CUM ITER =     48
     *** TIME =   236.833         TIME INC =   3.25122      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1517       OSCILLATION LIMIT = 0.4932    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.2958      INCREASED (FACTOR = 1.0137)

     *** LOAD STEP     1   SUBSTEP    49  COMPLETED.    CUM ITER =     49
     *** TIME =   240.129         TIME INC =   3.29577      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1497       OSCILLATION LIMIT = 0.4933    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.3406      INCREASED (FACTOR = 1.0136)

     *** LOAD STEP     1   SUBSTEP    50  COMPLETED.    CUM ITER =     50
     *** TIME =   243.470         TIME INC =   3.34059      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1477       OSCILLATION LIMIT = 0.4933    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.3857      INCREASED (FACTOR = 1.0135)

     *** LOAD STEP     1   SUBSTEP    51  COMPLETED.    CUM ITER =     51
     *** TIME =   246.855         TIME INC =   3.38569      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1457       OSCILLATION LIMIT = 0.4934    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.4311      INCREASED (FACTOR = 1.0134)

     *** LOAD STEP     1   SUBSTEP    52  COMPLETED.    CUM ITER =     52
     *** TIME =   250.286         TIME INC =   3.43110      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1438       OSCILLATION LIMIT = 0.4934    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.4768      INCREASED (FACTOR = 1.0133)

     *** LOAD STEP     1   SUBSTEP    53  COMPLETED.    CUM ITER =     53
     *** TIME =   253.763         TIME INC =   3.47684      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1419       OSCILLATION LIMIT = 0.4935    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.5229      INCREASED (FACTOR = 1.0133)

     *** LOAD STEP     1   SUBSTEP    54  COMPLETED.    CUM ITER =     54
     *** TIME =   257.286         TIME INC =   3.52291      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1401       OSCILLATION LIMIT = 0.4935    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.5694      INCREASED (FACTOR = 1.0132)

     *** LOAD STEP     1   SUBSTEP    55  COMPLETED.    CUM ITER =     55
     *** TIME =   260.856         TIME INC =   3.56935      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1383       OSCILLATION LIMIT = 0.4935    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.6162      INCREASED (FACTOR = 1.0131)

     *** LOAD STEP     1   SUBSTEP    56  COMPLETED.    CUM ITER =     56
     *** TIME =   264.472         TIME INC =   3.61617      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1365       OSCILLATION LIMIT = 0.4936    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.6634      INCREASED (FACTOR = 1.0131)

     *** LOAD STEP     1   SUBSTEP    57  COMPLETED.    CUM ITER =     57
     *** TIME =   268.135         TIME INC =   3.66338      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1347       OSCILLATION LIMIT = 0.4936    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.7110      INCREASED (FACTOR = 1.0130)

     *** LOAD STEP     1   SUBSTEP    58  COMPLETED.    CUM ITER =     58
     *** TIME =   271.846         TIME INC =   3.71101      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1330       OSCILLATION LIMIT = 0.4936    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.7591      INCREASED (FACTOR = 1.0130)

     *** LOAD STEP     1   SUBSTEP    59  COMPLETED.    CUM ITER =     59
     *** TIME =   275.605         TIME INC =   3.75907      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1313       OSCILLATION LIMIT = 0.4936    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.8076      INCREASED (FACTOR = 1.0129)

     *** LOAD STEP     1   SUBSTEP    60  COMPLETED.    CUM ITER =     60
     *** TIME =   279.413         TIME INC =   3.80759      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1296       OSCILLATION LIMIT = 0.4936    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.8566      INCREASED (FACTOR = 1.0129)

     *** LOAD STEP     1   SUBSTEP    61  COMPLETED.    CUM ITER =     61
     *** TIME =   283.269         TIME INC =   3.85658      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1280       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.9061      INCREASED (FACTOR = 1.0128)

     *** LOAD STEP     1   SUBSTEP    62  COMPLETED.    CUM ITER =     62
     *** TIME =   287.175         TIME INC =   3.90605      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1264       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.9560      INCREASED (FACTOR = 1.0128)

     *** LOAD STEP     1   SUBSTEP    63  COMPLETED.    CUM ITER =     63
     *** TIME =   291.131         TIME INC =   3.95603      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1248       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.0065      INCREASED (FACTOR = 1.0128)

     *** LOAD STEP     1   SUBSTEP    64  COMPLETED.    CUM ITER =     64
     *** TIME =   295.138         TIME INC =   4.00654      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1232       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.0576      INCREASED (FACTOR = 1.0127)

     *** LOAD STEP     1   SUBSTEP    65  COMPLETED.    CUM ITER =     65
     *** TIME =   299.196         TIME INC =   4.05758      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1217       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.1092      INCREASED (FACTOR = 1.0127)

     *** LOAD STEP     1   SUBSTEP    66  COMPLETED.    CUM ITER =     66
     *** TIME =   303.305         TIME INC =   4.10918      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1202       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.1613      INCREASED (FACTOR = 1.0127)

     *** LOAD STEP     1   SUBSTEP    67  COMPLETED.    CUM ITER =     67
     *** TIME =   307.466         TIME INC =   4.16135      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1186       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.2141      INCREASED (FACTOR = 1.0127)

     *** LOAD STEP     1   SUBSTEP    68  COMPLETED.    CUM ITER =     68
     *** TIME =   311.680         TIME INC =   4.21410      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1172       OSCILLATION LIMIT = 0.4937    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.2675      INCREASED (FACTOR = 1.0127)

     *** LOAD STEP     1   SUBSTEP    69  COMPLETED.    CUM ITER =     69
     *** TIME =   315.948         TIME INC =   4.26746      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1157       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.3214      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    70  COMPLETED.    CUM ITER =     70
     *** TIME =   320.269         TIME INC =   4.32143      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1143       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.3760      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    71  COMPLETED.    CUM ITER =     71
     *** TIME =   324.645         TIME INC =   4.37603      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1128       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.4313      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    72  COMPLETED.    CUM ITER =     72
     *** TIME =   329.076         TIME INC =   4.43128      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1114       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.4872      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    73  COMPLETED.    CUM ITER =     73
     *** TIME =   333.564         TIME INC =   4.48717      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1100       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.5437      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    74  COMPLETED.    CUM ITER =     74
     *** TIME =   338.107         TIME INC =   4.54374      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1087       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.6010      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    75  COMPLETED.    CUM ITER =     75
     *** TIME =   342.708         TIME INC =   4.60097      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1073       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.6589      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    76  COMPLETED.    CUM ITER =     76
     *** TIME =   347.367         TIME INC =   4.65890      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1060       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.7175      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    77  COMPLETED.    CUM ITER =     77
     *** TIME =   352.085         TIME INC =   4.71751      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1047       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.7768      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    78  COMPLETED.    CUM ITER =     78
     *** TIME =   356.862         TIME INC =   4.77684      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1034       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.8369      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    79  COMPLETED.    CUM ITER =     79
     *** TIME =   361.698         TIME INC =   4.83687      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1021       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.8976      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    80  COMPLETED.    CUM ITER =     80
     *** TIME =   366.596         TIME INC =   4.89761      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1008       OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.9591      INCREASED (FACTOR = 1.0126)

     *** LOAD STEP     1   SUBSTEP    81  COMPLETED.    CUM ITER =     81
     *** TIME =   371.555         TIME INC =   4.95908      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9958E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.0213      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    82  COMPLETED.    CUM ITER =     82
     *** TIME =   376.576         TIME INC =   5.02128      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9834E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.0842      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    83  COMPLETED.    CUM ITER =     83
     *** TIME =   381.661         TIME INC =   5.08421      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9713E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.1479      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    84  COMPLETED.    CUM ITER =     84
     *** TIME =   386.808         TIME INC =   5.14787      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9593E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.2123      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    85  COMPLETED.    CUM ITER =     85
     *** TIME =   392.021         TIME INC =   5.21227      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9474E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.2774      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    86  COMPLETED.    CUM ITER =     86
     *** TIME =   397.298         TIME INC =   5.27740      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9358E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.3433      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    87  COMPLETED.    CUM ITER =     87
     *** TIME =   402.641         TIME INC =   5.34327      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9242E-01   OSCILLATION LIMIT = 0.4938    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.4099      INCREASED (FACTOR = 1.0125)

     *** LOAD STEP     1   SUBSTEP    88  COMPLETED.    CUM ITER =     88
     *** TIME =   408.051         TIME INC =   5.40988      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9129E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.4772      INCREASED (FACTOR = 1.0124)

     *** LOAD STEP     1   SUBSTEP    89  COMPLETED.    CUM ITER =     89
     *** TIME =   413.528         TIME INC =   5.47722      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9017E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.5453      INCREASED (FACTOR = 1.0124)

     *** LOAD STEP     1   SUBSTEP    90  COMPLETED.    CUM ITER =     90
     *** TIME =   419.074         TIME INC =   5.54529      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8906E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.6141      INCREASED (FACTOR = 1.0124)

     *** LOAD STEP     1   SUBSTEP    91  COMPLETED.    CUM ITER =     91
     *** TIME =   424.688         TIME INC =   5.61408      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8797E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.6836      INCREASED (FACTOR = 1.0124)

     *** LOAD STEP     1   SUBSTEP    92  COMPLETED.    CUM ITER =     92
     *** TIME =   430.371         TIME INC =   5.68359      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8690E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.7538      INCREASED (FACTOR = 1.0124)

     *** LOAD STEP     1   SUBSTEP    93  COMPLETED.    CUM ITER =     93
     *** TIME =   436.125         TIME INC =   5.75382      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8584E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.8248      INCREASED (FACTOR = 1.0123)

     *** LOAD STEP     1   SUBSTEP    94  COMPLETED.    CUM ITER =     94
     *** TIME =   441.950         TIME INC =   5.82476      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8480E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.8964      INCREASED (FACTOR = 1.0123)

     *** LOAD STEP     1   SUBSTEP    95  COMPLETED.    CUM ITER =     95
     *** TIME =   447.846         TIME INC =   5.89639      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8377E-01   OSCILLATION LIMIT = 0.4939    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.9687      INCREASED (FACTOR = 1.0123)

     *** LOAD STEP     1   SUBSTEP    96  COMPLETED.    CUM ITER =     96
     *** TIME =   453.815         TIME INC =   5.96871      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8276E-01   OSCILLATION LIMIT = 0.4940    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.0417      INCREASED (FACTOR = 1.0122)

     *** LOAD STEP     1   SUBSTEP    97  COMPLETED.    CUM ITER =     97
     *** TIME =   459.857         TIME INC =   6.04171      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8176E-01   OSCILLATION LIMIT = 0.4940    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.1154      INCREASED (FACTOR = 1.0122)

     *** LOAD STEP     1   SUBSTEP    98  COMPLETED.    CUM ITER =     98
     *** TIME =   465.972         TIME INC =   6.11538      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8078E-01   OSCILLATION LIMIT = 0.4940    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.1897      INCREASED (FACTOR = 1.0122)

     *** LOAD STEP     1   SUBSTEP    99  COMPLETED.    CUM ITER =     99
     *** TIME =   472.162         TIME INC =   6.18970      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7981E-01   OSCILLATION LIMIT = 0.4940    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.2647      INCREASED (FACTOR = 1.0121)

     *** LOAD STEP     1   SUBSTEP   100  COMPLETED.    CUM ITER =    100
     *** TIME =   478.427         TIME INC =   6.26466      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7886E-01   OSCILLATION LIMIT = 0.4940    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.3402      INCREASED (FACTOR = 1.0121)

     *** LOAD STEP     1   SUBSTEP   101  COMPLETED.    CUM ITER =    101
     *** TIME =   484.767         TIME INC =   6.34024      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7792E-01   OSCILLATION LIMIT = 0.4941    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.4164      INCREASED (FACTOR = 1.0120)

     *** LOAD STEP     1   SUBSTEP   102  COMPLETED.    CUM ITER =    102
     *** TIME =   491.183         TIME INC =   6.41644      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7700E-01   OSCILLATION LIMIT = 0.4941    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.4932      INCREASED (FACTOR = 1.0120)

     *** LOAD STEP     1   SUBSTEP   103  COMPLETED.    CUM ITER =    103
     *** TIME =   497.676         TIME INC =   6.49323      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7610E-01   OSCILLATION LIMIT = 0.4941    
     *** AUTO TIME STEP:  NEXT TIME INC =  2.3235      DECREASED (FACTOR = 0.3578)

     *** LOAD STEP     1   SUBSTEP   104  COMPLETED.    CUM ITER =    104
     *** TIME =   500.000         TIME INC =   2.32353      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7578E-01   OSCILLATION LIMIT = 0.1761    
     *** AUTO TIME STEP:  NEXT TIME INC =  10.000      INCREASED (FACTOR = 4.3038)

     *** LOAD STEP     1   SUBSTEP   105  COMPLETED.    CUM ITER =    105
     *** TIME =   510.000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9532E-02   OSCILLATION LIMIT = 0.9532E-01
     *** AUTO TIME STEP:  NEXT TIME INC =  25.000      INCREASED (FACTOR = 2.5000)

     *** LOAD STEP     1   SUBSTEP   106  COMPLETED.    CUM ITER =    106
     *** TIME =   535.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.4495E-02   OSCILLATION LIMIT = 0.1124    
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   107  COMPLETED.    CUM ITER =    107
     *** TIME =   560.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.3177E-02   OSCILLATION LIMIT = 0.7942E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   108  COMPLETED.    CUM ITER =    108
     *** TIME =   585.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2619E-02   OSCILLATION LIMIT = 0.6549E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   109  COMPLETED.    CUM ITER =    109
     *** TIME =   610.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2350E-02   OSCILLATION LIMIT = 0.5874E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   110  COMPLETED.    CUM ITER =    110
     *** TIME =   635.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2213E-02   OSCILLATION LIMIT = 0.5533E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   111  COMPLETED.    CUM ITER =    111
     *** TIME =   660.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2143E-02   OSCILLATION LIMIT = 0.5358E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   112  COMPLETED.    CUM ITER =    112
     *** TIME =   685.000         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2107E-02   OSCILLATION LIMIT = 0.5268E-01
     *** AUTO TIME STEP:  NEXT TIME INC =  15.000      DECREASED (FACTOR = 0.6000)

     *** LOAD STEP     1   SUBSTEP   113  COMPLETED.    CUM ITER =    113
     *** TIME =   700.000         TIME INC =   15.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2094E-02   OSCILLATION LIMIT = 0.3141E-01
     *** AUTO TIME STEP:  NEXT TIME INC =  10.000      DECREASED (FACTOR = 0.6667)

     *** LOAD STEP     1   SUBSTEP   114  COMPLETED.    CUM ITER =    114
     *** TIME =   710.000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2760       OSCILLATION LIMIT =  2.760    
     *** AUTO STEP TIME:  NEXT TIME INC =  10.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   115  COMPLETED.    CUM ITER =    115
     *** TIME =   720.000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1647       OSCILLATION LIMIT =  1.647    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.3333      DECREASED (FACTOR = 0.3333)

     *** LOAD STEP     1   SUBSTEP   116  COMPLETED.    CUM ITER =    116
     *** TIME =   723.333         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1550       OSCILLATION LIMIT = 0.5168    
     *** AUTO STEP TIME:  NEXT TIME INC =  3.3333      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   117  COMPLETED.    CUM ITER =    117
     *** TIME =   726.667         TIME INC =   3.33333      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1495       OSCILLATION LIMIT = 0.4983    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.3446      INCREASED (FACTOR = 1.0034)

     *** LOAD STEP     1   SUBSTEP   118  COMPLETED.    CUM ITER =    118
     *** TIME =   730.011         TIME INC =   3.34458      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1451       OSCILLATION LIMIT = 0.4854    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.4455      INCREASED (FACTOR = 1.0302)

     *** LOAD STEP     1   SUBSTEP   119  COMPLETED.    CUM ITER =    119
     *** TIME =   733.457         TIME INC =   3.44549      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1412       OSCILLATION LIMIT = 0.4864    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.5415      INCREASED (FACTOR = 1.0279)

     *** LOAD STEP     1   SUBSTEP   120  COMPLETED.    CUM ITER =    120
     *** TIME =   736.998         TIME INC =   3.54150      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1375       OSCILLATION LIMIT = 0.4871    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.6354      INCREASED (FACTOR = 1.0265)

     *** LOAD STEP     1   SUBSTEP   121  COMPLETED.    CUM ITER =    121
     *** TIME =   740.634         TIME INC =   3.63542      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1341       OSCILLATION LIMIT = 0.4876    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.7282      INCREASED (FACTOR = 1.0255)

     *** LOAD STEP     1   SUBSTEP   122  COMPLETED.    CUM ITER =    122
     *** TIME =   744.362         TIME INC =   3.72823      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1309       OSCILLATION LIMIT = 0.4879    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.8203      INCREASED (FACTOR = 1.0247)

     *** LOAD STEP     1   SUBSTEP   123  COMPLETED.    CUM ITER =    123
     *** TIME =   748.182         TIME INC =   3.82033      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1278       OSCILLATION LIMIT = 0.4883    
     *** AUTO TIME STEP:  NEXT TIME INC =  3.9119      INCREASED (FACTOR = 1.0240)

     *** LOAD STEP     1   SUBSTEP   124  COMPLETED.    CUM ITER =    124
     *** TIME =   752.094         TIME INC =   3.91194      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1249       OSCILLATION LIMIT = 0.4886    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.0032      INCREASED (FACTOR = 1.0233)

     *** LOAD STEP     1   SUBSTEP   125  COMPLETED.    CUM ITER =    125
     *** TIME =   756.097         TIME INC =   4.00319      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1221       OSCILLATION LIMIT = 0.4889    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.0942      INCREASED (FACTOR = 1.0227)

     *** LOAD STEP     1   SUBSTEP   126  COMPLETED.    CUM ITER =    126
     *** TIME =   760.192         TIME INC =   4.09422      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1195       OSCILLATION LIMIT = 0.4891    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.1851      INCREASED (FACTOR = 1.0222)

     *** LOAD STEP     1   SUBSTEP   127  COMPLETED.    CUM ITER =    127
     *** TIME =   764.377         TIME INC =   4.18515      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1169       OSCILLATION LIMIT = 0.4894    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.2761      INCREASED (FACTOR = 1.0217)

     *** LOAD STEP     1   SUBSTEP   128  COMPLETED.    CUM ITER =    128
     *** TIME =   768.653         TIME INC =   4.27609      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1145       OSCILLATION LIMIT = 0.4896    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.3672      INCREASED (FACTOR = 1.0213)

     *** LOAD STEP     1   SUBSTEP   129  COMPLETED.    CUM ITER =    129
     *** TIME =   773.020         TIME INC =   4.36718      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1121       OSCILLATION LIMIT = 0.4898    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.4586      INCREASED (FACTOR = 1.0209)

     *** LOAD STEP     1   SUBSTEP   130  COMPLETED.    CUM ITER =    130
     *** TIME =   777.479         TIME INC =   4.45858      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1099       OSCILLATION LIMIT = 0.4899    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.5504      INCREASED (FACTOR = 1.0206)

     *** LOAD STEP     1   SUBSTEP   131  COMPLETED.    CUM ITER =    131
     *** TIME =   782.029         TIME INC =   4.55044      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1077       OSCILLATION LIMIT = 0.4900    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.6429      INCREASED (FACTOR = 1.0203)

     *** LOAD STEP     1   SUBSTEP   132  COMPLETED.    CUM ITER =    132
     *** TIME =   786.672         TIME INC =   4.64292      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1056       OSCILLATION LIMIT = 0.4902    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.7362      INCREASED (FACTOR = 1.0201)

     *** LOAD STEP     1   SUBSTEP   133  COMPLETED.    CUM ITER =    133
     *** TIME =   791.408         TIME INC =   4.73621      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1035       OSCILLATION LIMIT = 0.4902    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.8305      INCREASED (FACTOR = 1.0199)

     *** LOAD STEP     1   SUBSTEP   134  COMPLETED.    CUM ITER =    134
     *** TIME =   796.239         TIME INC =   4.83050      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1015       OSCILLATION LIMIT = 0.4903    
     *** AUTO TIME STEP:  NEXT TIME INC =  4.9260      INCREASED (FACTOR = 1.0198)

     *** LOAD STEP     1   SUBSTEP   135  COMPLETED.    CUM ITER =    135
     *** TIME =   801.165         TIME INC =   4.92601      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9954E-01   OSCILLATION LIMIT = 0.4904    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.0230      INCREASED (FACTOR = 1.0197)

     *** LOAD STEP     1   SUBSTEP   136  COMPLETED.    CUM ITER =    136
     *** TIME =   806.188         TIME INC =   5.02296      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9763E-01   OSCILLATION LIMIT = 0.4904    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.1216      INCREASED (FACTOR = 1.0196)

     *** LOAD STEP     1   SUBSTEP   137  COMPLETED.    CUM ITER =    137
     *** TIME =   811.309         TIME INC =   5.12156      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9575E-01   OSCILLATION LIMIT = 0.4904    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.2221      INCREASED (FACTOR = 1.0196)

     *** LOAD STEP     1   SUBSTEP   138  COMPLETED.    CUM ITER =    138
     *** TIME =   816.531         TIME INC =   5.22208      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9390E-01   OSCILLATION LIMIT = 0.4904    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.3248      INCREASED (FACTOR = 1.0197)

     *** LOAD STEP     1   SUBSTEP   139  COMPLETED.    CUM ITER =    139
     *** TIME =   821.856         TIME INC =   5.32476      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9208E-01   OSCILLATION LIMIT = 0.4903    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.4299      INCREASED (FACTOR = 1.0197)

     *** LOAD STEP     1   SUBSTEP   140  COMPLETED.    CUM ITER =    140
     *** TIME =   827.286         TIME INC =   5.42987      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.9029E-01   OSCILLATION LIMIT = 0.4903    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.5377      INCREASED (FACTOR = 1.0199)

     *** LOAD STEP     1   SUBSTEP   141  COMPLETED.    CUM ITER =    141
     *** TIME =   832.824         TIME INC =   5.53768      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8852E-01   OSCILLATION LIMIT = 0.4902    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.6485      INCREASED (FACTOR = 1.0200)

     *** LOAD STEP     1   SUBSTEP   142  COMPLETED.    CUM ITER =    142
     *** TIME =   838.472         TIME INC =   5.64849      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8677E-01   OSCILLATION LIMIT = 0.4901    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.7626      INCREASED (FACTOR = 1.0202)

     *** LOAD STEP     1   SUBSTEP   143  COMPLETED.    CUM ITER =    143
     *** TIME =   844.235         TIME INC =   5.76257      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8503E-01   OSCILLATION LIMIT = 0.4900    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.8802      INCREASED (FACTOR = 1.0204)

     *** LOAD STEP     1   SUBSTEP   144  COMPLETED.    CUM ITER =    144
     *** TIME =   850.115         TIME INC =   5.88023      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8331E-01   OSCILLATION LIMIT = 0.4899    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.0018      INCREASED (FACTOR = 1.0207)

     *** LOAD STEP     1   SUBSTEP   145  COMPLETED.    CUM ITER =    145
     *** TIME =   856.117         TIME INC =   6.00179      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.8160E-01   OSCILLATION LIMIT = 0.4897    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.1275      INCREASED (FACTOR = 1.0210)

     *** LOAD STEP     1   SUBSTEP   146  COMPLETED.    CUM ITER =    146
     *** TIME =   862.244         TIME INC =   6.12754      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7990E-01   OSCILLATION LIMIT = 0.4896    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.2578      INCREASED (FACTOR = 1.0213)

     *** LOAD STEP     1   SUBSTEP   147  COMPLETED.    CUM ITER =    147
     *** TIME =   868.502         TIME INC =   6.25782      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7821E-01   OSCILLATION LIMIT = 0.4894    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.3929      INCREASED (FACTOR = 1.0216)

     *** LOAD STEP     1   SUBSTEP   148  COMPLETED.    CUM ITER =    148
     *** TIME =   874.895         TIME INC =   6.39295      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7653E-01   OSCILLATION LIMIT = 0.4893    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.5333      INCREASED (FACTOR = 1.0219)

     *** LOAD STEP     1   SUBSTEP   149  COMPLETED.    CUM ITER =    149
     *** TIME =   881.428         TIME INC =   6.53326      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7486E-01   OSCILLATION LIMIT = 0.4891    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.6791      INCREASED (FACTOR = 1.0223)

     *** LOAD STEP     1   SUBSTEP   150  COMPLETED.    CUM ITER =    150
     *** TIME =   888.107         TIME INC =   6.67908      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7320E-01   OSCILLATION LIMIT = 0.4889    
     *** AUTO TIME STEP:  NEXT TIME INC =  6.8308      INCREASED (FACTOR = 1.0227)

     *** LOAD STEP     1   SUBSTEP   151  COMPLETED.    CUM ITER =    151
     *** TIME =   894.938         TIME INC =   6.83075      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7154E-01   OSCILLATION LIMIT = 0.4887    
     *** AUTO TIME STEP:  NEXT TIME INC =  5.0620      DECREASED (FACTOR = 0.7411)

     *** LOAD STEP     1   SUBSTEP   152  COMPLETED.    CUM ITER =    152
     *** TIME =   900.000         TIME INC =   5.06196      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7035E-01   OSCILLATION LIMIT = 0.3561    
     *** AUTO TIME STEP:  NEXT TIME INC =  10.000      INCREASED (FACTOR = 1.9755)

     *** LOAD STEP     1   SUBSTEP   153  COMPLETED.    CUM ITER =    153
     *** TIME =   910.000         TIME INC =   10.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2093E-01   OSCILLATION LIMIT = 0.2093    
     *** AUTO TIME STEP:  NEXT TIME INC =  23.886      INCREASED (FACTOR = 2.3886)

     *** LOAD STEP     1   SUBSTEP   154  COMPLETED.    CUM ITER =    154
     *** TIME =   933.886         TIME INC =   23.8864      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1164E-01   OSCILLATION LIMIT = 0.2781    
     *** AUTO TIME STEP:  NEXT TIME INC =  25.000      INCREASED (FACTOR = 1.0466)

     *** LOAD STEP     1   SUBSTEP   155  COMPLETED.    CUM ITER =    155
     *** TIME =   958.886         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.7726E-02   OSCILLATION LIMIT = 0.1931    
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   156  COMPLETED.    CUM ITER =    156
     *** TIME =   983.886         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.5386E-02   OSCILLATION LIMIT = 0.1346    
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   157  COMPLETED.    CUM ITER =    157
     *** TIME =   1008.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.3926E-02   OSCILLATION LIMIT = 0.9816E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   158  COMPLETED.    CUM ITER =    158
     *** TIME =   1033.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.3049E-02   OSCILLATION LIMIT = 0.7624E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   159  COMPLETED.    CUM ITER =    159
     *** TIME =   1058.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2544E-02   OSCILLATION LIMIT = 0.6361E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   160  COMPLETED.    CUM ITER =    160
     *** TIME =   1083.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2262E-02   OSCILLATION LIMIT = 0.5655E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   161  COMPLETED.    CUM ITER =    161
     *** TIME =   1108.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2107E-02   OSCILLATION LIMIT = 0.5268E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   162  COMPLETED.    CUM ITER =    162
     *** TIME =   1133.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.2023E-02   OSCILLATION LIMIT = 0.5059E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   163  COMPLETED.    CUM ITER =    163
     *** TIME =   1158.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1978E-02   OSCILLATION LIMIT = 0.4946E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   164  COMPLETED.    CUM ITER =    164
     *** TIME =   1183.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1954E-02   OSCILLATION LIMIT = 0.4885E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   165  COMPLETED.    CUM ITER =    165
     *** TIME =   1208.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1941E-02   OSCILLATION LIMIT = 0.4853E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   166  COMPLETED.    CUM ITER =    166
     *** TIME =   1233.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1934E-02   OSCILLATION LIMIT = 0.4835E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   167  COMPLETED.    CUM ITER =    167
     *** TIME =   1258.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1930E-02   OSCILLATION LIMIT = 0.4826E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   168  COMPLETED.    CUM ITER =    168
     *** TIME =   1283.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1928E-02   OSCILLATION LIMIT = 0.4821E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   169  COMPLETED.    CUM ITER =    169
     *** TIME =   1308.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1927E-02   OSCILLATION LIMIT = 0.4818E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   170  COMPLETED.    CUM ITER =    170
     *** TIME =   1333.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1927E-02   OSCILLATION LIMIT = 0.4817E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   171  COMPLETED.    CUM ITER =    171
     *** TIME =   1358.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.4816E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   172  COMPLETED.    CUM ITER =    172
     *** TIME =   1383.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.4816E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   173  COMPLETED.    CUM ITER =    173
     *** TIME =   1408.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.4815E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   174  COMPLETED.    CUM ITER =    174
     *** TIME =   1433.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.4815E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   175  COMPLETED.    CUM ITER =    175
     *** TIME =   1458.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.4815E-01
     *** AUTO STEP TIME:  NEXT TIME INC =  25.000      UNCHANGED

     *** LOAD STEP     1   SUBSTEP   176  COMPLETED.    CUM ITER =    176
     *** TIME =   1483.89         TIME INC =   25.0000      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.4815E-01
     *** AUTO TIME STEP:  NEXT TIME INC =  16.114      DECREASED (FACTOR = 0.6445)

     *** LOAD STEP     1   SUBSTEP   177  COMPLETED.    CUM ITER =    177
     *** TIME =   1500.00         TIME INC =   16.1136      NEW TRIANG MATRIX
     *** RESPONSE EIGENVALUE = 0.1926E-02   OSCILLATION LIMIT = 0.3104E-01



.. GENERATED FROM PYTHON SOURCE LINES 177-181

Post-Processing
~~~~~~~~~~~~~~~
Open up the result file using ``ansys.mapdl.reader``
result = mapdl.thermal_result

.. GENERATED FROM PYTHON SOURCE LINES 181-183

.. code-block:: default

    mapdl.post1()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    FINISH SOLUTION PROCESSING


     ***** ROUTINE COMPLETED *****  CP =         0.000


       *****MAPDL VERIFICATION RUN ONLY*****
         DO NOT USE RESULTS FOR PRODUCTION

              ***** MAPDL RESULTS INTERPRETATION (POST1) *****


     USE LAST SUBSTEP ON RESULT FILE  FOR LOAD CASE 0 

     SET COMMAND GOT LOAD STEP=     1  SUBSTEP=   177  CUMULATIVE ITERATION=   177
       TIME/FREQUENCY=  1500.0    
     TITLE=



.. GENERATED FROM PYTHON SOURCE LINES 184-188

Visualize a Slice
~~~~~~~~~~~~~~~~~
Visualize a slice through the dataset using ``pyvista``
for more details visit `pyvista documentation <pyvista_docs_>`_.

.. GENERATED FROM PYTHON SOURCE LINES 188-202

.. code-block:: default


    # get the temperature of the 30th result set
    mapdl.set(1, 30)
    temp = mapdl.post_processing.nodal_temperature()

    # Load this result into the underlying VTK grid
    grid = mapdl.mesh._grid
    grid["temperature"] = temp

    # generate a single horizontal slice slice along the XY plane
    single_slice = grid.slice(normal=[0, 0, 1], origin=[0, 0, 0.5])
    single_slice.plot(scalars="temperature")





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_002.png
   :alt: transient thermal
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 203-206

Visualize Several Slices
~~~~~~~~~~~~~~~~~~~~~~~~
This shows how you can visualize a series of slices through a dataset

.. GENERATED FROM PYTHON SOURCE LINES 206-220

.. code-block:: default


    # get the temperature of a different result set
    mapdl.set(1, 120)
    temp = mapdl.post_processing.nodal_temperature()

    # Load this result into the underlying VTK grid
    grid = mapdl.mesh._grid
    grid["temperature"] = temp

    # generate a single horizontal slice slice along the XY plane
    slices = grid.slice_along_axis(7, "y")
    slices.plot(scalars="temperature", lighting=False, show_edges=True)





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_003.png
   :alt: transient thermal
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 221-229

Temperature at a Single Point
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Extract the temperature at a single node and plot it with respect to
the input temperatures using ``ansys.mapdl``

Here, we use the ``get_value`` command which is very similar to the
``*GET`` command, except it immediately returns the value as a
python accessible variable, rather than storing it to a MAPDL value.

.. GENERATED FROM PYTHON SOURCE LINES 229-236

.. code-block:: default


    # for example, the temperature of Node 12 is can be retrieved simply with:
    mapdl.get_value("node", 12, "TEMP")

    # note that this is similar to # *GET, Par, NODE, N, Item1, IT1NUM, Item2, IT2NUM
    # See the MAPDL reference for all the items you can obtain using *GET





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    251.05408986663625



.. GENERATED FROM PYTHON SOURCE LINES 237-238

Here, we extract the temperature of the node across for each solution

.. GENERATED FROM PYTHON SOURCE LINES 238-247

.. code-block:: default

    nsets = mapdl.post_processing.nsets
    node_temp = []
    for i in range(1, 1 + nsets):
        mapdl.set(1, i)
        node_temp.append(mapdl.get_value("node", 12, "TEMP"))

    # here are the first 10 temperatures
    node_temp[:10]





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [76.27707675716556, 76.81799224351991, 77.42151540097561, 79.04838835561252, 81.19108300049334, 83.56709007016163, 85.35125295387651, 86.23266429275354, 86.97754017604869, 88.31275589884447]



.. GENERATED FROM PYTHON SOURCE LINES 248-251

Alternatively, you can simply grab the data for the node from the
entire response.  This is less efficient as the entire data set is
sent back for each result.

.. GENERATED FROM PYTHON SOURCE LINES 251-264

.. code-block:: default


    # get the index of node 12 in MAPDL
    idx = np.nonzero(mapdl.mesh.nnum == 12)[0][0]

    # get the temperature at that index for each result
    node_temp_from_post = []
    for i in range(1, 1 + nsets):
        mapdl.set(1, i)
        node_temp_from_post.append(mapdl.post_processing.nodal_temperature()[idx])

    # Again, the first 10 temperatures
    node_temp_from_post[:10]





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [76.27707675716556, 76.81799224351991, 77.42151540097561, 79.04838835561252, 81.19108300049334, 83.56709007016163, 85.35125295387651, 86.23266429275354, 86.97754017604869, 88.31275589884447]



.. GENERATED FROM PYTHON SOURCE LINES 265-266

Plot the temperature as a function of time

.. GENERATED FROM PYTHON SOURCE LINES 266-274

.. code-block:: default

    time_values = mapdl.post_processing.time_values
    plt.plot(time_values, node_temp, label="Node 12")
    plt.plot(my_bulk[:, 0], my_bulk[:, 1], ":", label="Input")
    plt.legend()
    plt.xlabel("Time (seconds)")
    plt.ylabel("Temperature ($^\circ$F)")
    plt.show()




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_004.png
   :alt: transient thermal
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_transient_thermal_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 275-278

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 278-279

.. code-block:: default

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 9.373 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_transient_thermal.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: transient_thermal.py <transient_thermal.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: transient_thermal.ipynb <transient_thermal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
